# nisarqa

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE-BSD-3-Clause.txt  LogError.py  MANIFEST.in  README.md  SLCFile.bak0.py  SLCFile.py  SLCImage.py  check_time.py  environment.yaml  errors_base.py  errors_derived.py  generate_test_data.py  params.py  pyproject.toml  requirements.txt  setup.py  test_time.py  utility.py  verify_gcov.py  verify_gslc.py  verify_gunw.py  verify_rslc.py  verify_runw.py  verify_slc.py  verify_unw.py
.github/: CODEOWNERS
.spyproject/: workspace.ini
doc/: README.md
doc/product_specs/: 01_intro_and_overview.md  02_summary_csv.md  03_browse_png_kml.md  04_report_pdf.md  04a_single_input_products.md  04b_caltools.md  04c_insar_products.md  05_stats_h5.md  05a_rslc_hdf5_spec.md  05b_gslc_hdf5_spec.md  05c_gcov_hdf5_spec.md  05d_rifg_hdf5_spec.md  05e_runw_hdf5_spec.md  05f_gunw_hdf5_spec.md  05g_roff_hdf5_spec.md  05h_goff_hdf5_spec.md  generate_stats_markdown.py
doc/product_specs/images/: resize_png_to_jpg.py
docs/: README.md
docs/helpers/: generate_stats_markdown.py  image_compression_tips.md  nisarqa_product_specs_front_matter_template.docx  process_to_build_the_docx.md  process_to_update_the_markdown_files.md  reformat_image.py  style_guide_for_writing_markdown_specs.md
docs/product_specs/: 01_intro_and_overview.md  02_summary_csv.md  03_browse_png_kml.md  04_report_pdf.md  04a_single_input_products.md  04b_caltools.md  04c_insar_products.md  05_stats_h5.md  05a_rslc_hdf5_spec.md  05a_rslc_qa_hdf5_spec.md  05b_gslc_hdf5_spec.md  05b_gslc_qa_hdf5_spec.md  05c_gcov_hdf5_spec.md  05c_gcov_qa_hdf5_spec.md  05d_rifg_qa_hdf5_spec.md  05e_runw_hdf5_spec.md  05e_runw_qa_hdf5_spec.md  05f_gunw_hdf5_spec.md  05f_gunw_qa_hdf5_spec.md  05g_roff_qa_hdf5_spec.md  05h_goff_hdf5_spec.md  05h_goff_qa_hdf5_spec.md  06a_appendix_a.md
quality/: GCOVFile.py  GCOVImage.py  GSLCFile.py  GUNWAbstractImage.py  GUNWFile.py  GUNWGridImage.py  GUNWOffsetImage.py  GUNWSwathImage.py  HdfGroup.py  LogError.py  NISARFile.py  SLCFile.py  SLCImage.py  UNWFile.py  UNWSwathImage.py  check_time.py  errors_base.py  errors_derived.py  logging_base.py  nisar_logging.py  params.py  utility.py
src/QA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nisarqa/: __init__.py  __main__.py  geolocation_utils.py  globals.py  grids.py  lonlat.py  raster_classes.py  stats_h5_globals.py
src/nisarqa/input_product_readers/: __init__.py  _utils.py  gcov_reader.py  geo_product.py  gslc_reader.py  igram_groups.py  insar_product.py  nisar_product.py  non_insar_geo_product.py  non_insar_product.py  offset_product.py  radar_product.py  rifg_runw_gunw_readers.py  roff_goff_readers.py  rslc_reader.py  slc_product.py
src/nisarqa/parameters/: __init__.py  browse_output_paths.py  caltools_params.py  gcov_params.py  gslc_params.py  insar_params.py  nisar_params.py  rslc_caltools_params.py  rslc_params.py
src/nisarqa/processing/: __init__.py  az_and_slant_rng_offsets.py  az_and_slant_rng_variances.py  calc.py  connected_components.py  corr_surface_peak_and_cross_variance.py  geolocation.py  histograms.py  hsi.py  ionosphere_phase_screen.py  multilook.py  plotting_utils.py  processing_utils.py  quiver_plots.py  setup_pdf.py  tiling.py  unwrapped_coh_mag.py  unwrapped_phase_image.py  wrapped_phase_image_and_coh_mag.py
src/nisarqa/products/: __init__.py  caltools.py  gcov.py  goff.py  gslc.py  gunw.py  igram.py  offsets.py  product_reader.py  rifg.py  roff.py  rslc.py  runw.py
src/nisarqa/schemas/: qa_rslc_schema.yaml
src/nisarqa/utils/: __init__.py  calc.py  generate_test_data.py  input_verification.py  lonlat.py  metadata_checks.py  metadata_cube_checks.py  metrics_writer.py  multilook.py  parsing.py  plotting.py  raster_classes.py  sanity_checks.py  stats_writer.py  summary_csv.py  tiling.py  typing.py  utils.py
src/nisarqa/validate/: __init__.py  metadata_checks.py  sanity_checks.py
src/nisarqa/workflows/: __init__.py  gcov_qa.py  gslc_qa.py  igram_qa.py  offsets_qa.py  rslc_qa.py
src/products/: rslc.py
src/utils/: calc.py  generate_test_data.py  input_verification.py  multilook.py  parsing.py  tiling.py  utils.py
test/: array_size_test.py  connected_test.py  frequency_test.py  gcov_metadata_test.py  identification_test.py  lsar_vs_ssar_test.py  missing_band_test.py  nan_test.py  percentile_test.py  subswath_test.py  time_test.py
tests/: multilook_test.py
utilities/: parsing.py
xml/: nisar_L0B_RSD.xml  nisar_L1_IFG.xml  nisar_L1_MLD.xml  nisar_L1_RIFG.xml  nisar_L1_RSLC.xml  nisar_L1_RUNW.xml  nisar_L1_SLC.xml  nisar_L1_UNW.xml  nisar_L2_GCOV.xml  nisar_L2_GSLC.xml  nisar_L2_GUNW.xml
yaml/: gcov.yaml  gslc.yaml  gunw.yaml  rslc.yaml  rslc.yaml~
(+117 files in other folders)
