[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8",  # required to install the package-data
]
build-backend = "setuptools.build_meta"

[project]
name = "nisarqa"
requires-python = ">=3.9"

description = "NISAR ADT Quality Assurance Software"

# README format is auto-detected from the extension as GitHub-flavored Markdown
readme = "README.md"

authors = [
    { name = "Sam Niemoeller", email = "samantha.c.niemoeller@jpl.nasa.gov" },
]

keywords = [
    "nisar",
    "radar",
    "quality-assurance",
    "qa",
    "remote-sensing",
    "sar",
    "synthetic-aperture-radar",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "nisarqa.__version__"}
dependencies = [
    cycler,
    h5py>=3,
    isce3>=0.16,
    matplotlib,
    numpy>=1.20,
    pillow,
    python>=3.9,
    ruamel.yaml,
    shapely,
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nisarqa = ["*.xml"]

[project.urls]
Homepage = "http://nisar.jpl.nasa.gov"

[project.scripts]
nisarqa = "nisarqa.__main__:main"
