[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8",  # installs all package data, including XML product specs
]
build-backend = "setuptools.build_meta"

[project]
name = "nisarqa"
requires-python = ">=3.9"

description = "NISAR ADT Quality Assurance Software"

# README format is auto-detected from the extension as GitHub-flavored Markdown
readme = "README.md"

authors = [
    { name = "Sam Niemoeller", email = "samantha.c.niemoeller@jpl.nasa.gov" },
]

keywords = [
    "nisar",
    "radar",
    "quality-assurance",
    "qa",
    "remote-sensing",
    "sar",
    "synthetic-aperture-radar",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "cycler",
    "h5py>=3",
    "isce3>=0.23",
    "matplotlib",
    "numpy>=1.20",
    "pillow",
    "python>=3.9",
    "ruamel.yaml",
    "shapely",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "nisarqa.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "http://nisar.jpl.nasa.gov"

[project.scripts]
nisarqa = "nisarqa.__main__:main"

[tool.black]
preview = true
line-length = 80

[tool.isort]
profile = "black"